crates/service/tests/code_action/snapshots/features__code_action__inline_extern_type__multi.snap
---
source: crates/service/tests/code_action/inline_extern_type.rs
expression: response
---
[
  {
    "title": "Inline extern type",
    "kind": "refactor.inline",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 21
              },
              "end": {
                "line": 2,
                "character": 21
              }
            },
            "newText": " (func (param i32))"
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 38
              },
              "end": {
                "line": 2,
                "character": 38
              }
            },
            "newText": " (func (param i32))"
          },
          {
            "range": {
              "start": {
                "line": 2,
                "character": 39
              },
              "end": {
                "line": 2,
                "character": 58
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
